--- a/config/compton.conf
+++ b/config/compton.conf
@@ -56,7 +56,7 @@ glx-swap-method = "6";
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = false;
+shadow = true;
 # Don't draw shadows on DND windows.
 no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
@@ -64,13 +64,13 @@ no-dock-shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 7;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -5;
+shadow-offset-x = -10;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -5;
+shadow-offset-y = -10;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.5;
+shadow-opacity = 0.3;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -94,11 +94,13 @@ shadow-exclude = [
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
+    "class_g = 'i3-frame'",
     "class_g ?= 'Notify-osd'",
     "class_g ?= 'Cairo-dock'",
     "class_g ?= 'Xfce4-notifyd'",
     "class_g ?= 'Xfce4-power-manager'",
-    "_GTK_FRAME_EXTENTS@:c"
+    "_GTK_FRAME_EXTENTS@:c",
+    "bounding_shaped",
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
