--- a/config/compton.conf
+++ b/config/compton.conf
@@ -23,7 +23,7 @@ glx-no-stencil = true;
 # but a 20% increase when only 1/4 is.
 # My tests on nouveau show terrible slowdown.
 # Useful with --glx-swap-method, as well.
-glx-copy-from-front = false;
+#glx-copy-from-front = false;
 
 # GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
 # My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
@@ -57,10 +57,6 @@ glx-swap-method = "3";
 
 # Enabled client-side shadows on windows.
 shadow = true;
-# Don't draw shadows on DND windows.
-no-dnd-shadow = true;
-# Avoid drawing shadows on dock/panel windows.
-no-dock-shadow = true;
 # The blur radius for shadows. (default 12)
 shadow-radius = 7;
 # The left offset for shadows. (default -15)
@@ -109,12 +105,10 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-menu-opacity = 1;
 inactive-opacity = 1;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
-alpha-step = 0.06;
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
@@ -140,7 +134,7 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = false;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+fade-delta = 2;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
@@ -190,7 +184,7 @@ vsync = "opengl-swc";
 # Reported to have no effect, though.
 dbe = false;
 # Painting on X Composite overlay window. Recommended.
-paint-on-overlay = true;
+#paint-on-overlay = true;
 
 # Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
@@ -229,5 +223,25 @@ wintypes:
         opacity = 0.85;
         # focus: Whether to always consider windows of this type focused.
         focus = true;
+    };
+    dock =
+    {
+        # Avoid drawing shadows on dock/panel windows.
+        shadow = false;
+    };
+    dnd =
+    {
+        # Don't draw shadows on DND windows.
+        shadow = false;
+    };
+    popup_menu =
+    {
+        # opacity: Default opacity for the type of windows.
+        opacity = 1;
+    };
+    dropdown_menu =
+    {
+        # opacity: Default opacity for the type of windows.
+        opacity = 1;
     };
 };
