--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -18,6 +18,7 @@ double_click_interval=400
 gui_effects=@Invalid()
 keyboard_scheme=2
 menus_have_icons=true
+show_shortcuts_in_context_menus=true
 stylesheets=@Invalid()
 toolbutton_style=4
 underline_shortcut=1
